; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_uiTableModelRowInserted.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_uiTableModelRowInserted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@STAMP_GOOD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uiTableModelRowInserted(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32* @gtk_tree_path_new_from_indices(i32 %7, i32 -1)
  store i32* %8, i32** %5, align 8
  %9 = load i32, i32* @STAMP_GOOD, align 4
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @GINT_TO_POINTER(i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @GTK_TREE_MODEL(i32* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @gtk_tree_model_row_inserted(i32 %15, i32* %16, %struct.TYPE_3__* %6)
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @gtk_tree_path_free(i32* %18)
  ret void
}

declare dso_local i32* @gtk_tree_path_new_from_indices(i32, i32) #1

declare dso_local i32 @GINT_TO_POINTER(i32) #1

declare dso_local i32 @gtk_tree_model_row_inserted(i32, i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @GTK_TREE_MODEL(i32*) #1

declare dso_local i32 @gtk_tree_path_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
